syntax = "proto3";
package lbm.bank.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "lbm/base/v1/coin.proto";

option go_package = "github.com/line/lbm-sdk/x/bank/types";

// SendAuthorization allows the grantee to spend up to spend_limit coins from
// the granter's account.
//
// Since: cosmos-sdk 0.43
message SendAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  repeated lbm.base.v1.Coin spend_limit = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/line/lbm-sdk/types.Coins"];
}
