syntax = "proto3";
package lbm.feegrant.v1;

import "gogoproto/gogo.proto";
import "lbm/feegrant/v1/feegrant.proto";
import "lbm/base/query/v1/pagination.proto";
import "google/api/annotations.proto";

option go_package = "github.com/line/lbm-sdk/x/feegrant/types";

// Query defines the gRPC querier service.
service Query {

  // Allowance returns fee granted to the grantee by the granter.
  rpc Allowance(QueryAllowanceRequest) returns (QueryAllowanceResponse) {
    option (google.api.http).get = "/lbm/feegrant/v1/allowance/{granter}/{grantee}";
  }

  // Allowances returns all the grants for address.
  rpc Allowances(QueryAllowancesRequest) returns (QueryAllowancesResponse) {
    option (google.api.http).get = "/lbm/feegrant/v1/allowances/{grantee}";
  }
}

// QueryAllowanceRequest is the request type for the Query/Allowance RPC method.
message QueryAllowanceRequest {
  // granter is the address of the user granting an allowance of their funds.
  string granter = 1 [(gogoproto.moretags) = "yaml:\"granter_address\""];

  // grantee is the address of the user being granted an allowance of another user's funds.
  string grantee = 2 [(gogoproto.moretags) = "yaml:\"grantee_address\""];
}

// QueryAllowanceResponse is the response type for the Query/Allowance RPC method.
message QueryAllowanceResponse {
  // allowance is a allowance granted for grantee by granter.
  lbm.feegrant.v1.Grant allowance = 1;
}

// QueryAllowancesRequest is the request type for the Query/Allowances RPC method.
message QueryAllowancesRequest {
  string grantee = 1 [(gogoproto.moretags) = "yaml:\"grantee_address\""];

  // pagination defines an pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// QueryAllowancesResponse is the response type for the Query/Allowances RPC method.
message QueryAllowancesResponse {
  // allowances are allowance's granted for grantee by granter.
  repeated lbm.feegrant.v1.Grant allowances = 1;

  // pagination defines an pagination for the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}
